--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "dash",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://backend-call-center-2.onrender.com",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
